HelloUltraviolet/Fixtures/RejectedSource/Expressions/AsyncTypeArgIllFormed/Expected.uv
//! Expected diagnostic metadata for the AsyncTypeArgIllFormed rejected-source specimen.

expectedDiagnostic("E-CON-0201", "rule.21.WF-Async-Arg-WF-Err")
